Working around a mysterious bug which was expos...
Working around a mysterious bug which was exposed in r17461.